...
                android:layout_marginBottom="20dp"
                android:text="@string/let_s_get_started"
                android:textColor="@color/dark_textSecondary"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonInitialToSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_sign_in"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginBottom="8dp"
                android:paddingVertical="12dp"
                android:paddingHorizontal="24dp" />

            <Button
                android:id="@+id/buttonInitialToSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_sign_up"
                android:text="@string/sign_up"
                android:textColor="@color/btn_purpleOutline"
                android:textAllCaps="false"
...
